@@ -1,3 +1,10 @@
+2018-02-?? Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.044_01)
+* Use API function for reconnect; fixes compilation on MariaDB 10.2.6+.
+  Fix provided by Pali.
+* Fixed broken link to MySQL download page, provided by Mohammad S Anwar.
+* Spelling fixes, provided by Ville Skyttä.
+
+
 2018-01-22 Patrick Galbraith, Michiel Beijen, DBI/DBD community (4.044)
 * Reapply https://github.com/perl5-dbi/DBD-mysql/pull/114 
   "Improve SSL settings, reflect changes for BACKRONYM and 
